--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 	--color-top-bar-popup: #444;
 	--color-top-bar-dropdown: #555;
   --color-background: #f0f0f0;
-	--color-stats-background: #FFF;
+	--color-stats-background: #f0f0f0;
 	--color-stats-feedback-background: #FFF;
 
 	--top-bar-height: 60px;
@@ -23,6 +23,7 @@
 	--container-width: 1000px;
 	--container-margin: 10px;
 	--button-radius-normal: 6px;
+	--font-family-normal: 'Open Sans', Arial, sans-serif;
 
 	--player-names-button-size: 60px;
 	--player-names-button-pad: 10px;
@@ -44,6 +45,7 @@
 	--score-board-font-large: 24px;
 	--score-board-font-normal: 20px;
 	--score-board-input-border: 1px solid #444;
+	--score-board-input-radius: 2px;
 	--score-board-input-background: #FFF;
 	--score-board-input-width: 65px;
 	--score-board-button-size: 25px;
@@ -56,24 +58,48 @@
 	--right-column-margin-left: 20px;
 	--toolbar-button-pad: 12px;
 	--toolbar-button-font: 20px;
-	--toolbar-button-font-color: #666;
+	--toolbar-button-font-color: #444;
 	--toolbar-button-background: #FFF;
-	--toolbar-button-border: 1px solid #CCC;
+	--toolbar-button-border: 1px solid #AAA;
 	--toolbar-button-background-active: #3D94F6;
 	--toolbar-button-font-color-active: #FFF;
 	--undo-button-margin-top: 10px;
 	--undo-button-background: #dc3545;
-	--undo-button-font-color: 20px;
+	--undo-button-font: 20px;
 	--undo-button-font-color: #FFF;
 	--undo-button-pad: 10px;
 
-	--stats-width: 900px;
+	--stats-feedback-button-width: 80px;
+	--stats-feedback-button-pad: 8px;
+	--stats-feedback-font-large: 18px;
+	--stats-feedback-font-large-weight: 200;
+	--stats-feedback-button-font-color: #FFFFFF;
+	--stats-feedback-button-color: #3D94F6;
+	--stats-feedback-button-color-hover: #007bff;
+	--stats-feedback-button-border: 1px solid #3D94F6;
+	--stats-feedback-text-pad: 12px;
+	--stats-feedback-text-border: 1px solid #AAA;
+	--stats-feedback-text-width: 600px;
+	--stats-feedback-font-normal: 15px;
+	--stats-feedback-margin: 30px;
+	--stats-feedback-pad: 16px 20px;
+	--stats-feedback-height: 160px;
+	--stats-feedback-background: #f6f7f9;
+	--stats-feedback-border: 2px solid #dddfe2;
+	--stats-table-name-width: 120px;
+	--stats-court-max-width: 680px;
+	--stats-stroke-icon-width: 60px;
+	--stats-table-margin: 10px;
+	--stats-pin-icon-width: 50px;
+	--stats-table-font: 18px;
+	--stats-table-header-font: 28px;
 }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: var(--font-family-normal);
 	background-color: var(--color-background);
 	margin: 0;
+	color: var(--color-top-bar);
 }
 
 #container {
@@ -355,6 +381,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	border: var(--score-board-input-border);
+	border-radius: var(--score-board-input-radius);
 }
 
 .score_inc_btn, .score_dec_btn {
@@ -389,30 +416,30 @@ body {
 
 /* Logging Toolbar Style */
 #logging-toolbar {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
 }
 
 .toolbar-button {
-    padding: var(--toolbar-button-pad);
-		background-color: var(--toolbar-button-background);
-		border: var(--toolbar-button-border);
-		box-shadow: none;
-    color: var(--toolbar-button-font-color);
-    font-size: var(--toolbar-button-font);
-		text-align: left;
+  padding: var(--toolbar-button-pad);
+	background-color: var(--toolbar-button-background);
+	border: var(--toolbar-button-border);
+	box-shadow: none;
+  color: var(--toolbar-button-font-color);
+  font-size: var(--toolbar-button-font);
+	text-align: left;
 }
 .toolbar-button:first-child {
-    border-radius: var(--button-radius-normal) var(--button-radius-normal) 0 0;
+  border-radius: var(--button-radius-normal) var(--button-radius-normal) 0 0;
 }
-.toolbar-button:last-child {
-    border-radius: 0 0 var(--button-radius-normal) var(--button-radius-normal);
+.toolbar-button:nth-child(4) {
+  border-radius: 0 0 var(--button-radius-normal) var(--button-radius-normal);
 }
 .toolbar-button.active {
-    background-color: var(--toolbar-button-background-active);
-		color: var(--toolbar-button-font-color-active);
+  background-color: var(--toolbar-button-background-active);
+	color: var(--toolbar-button-font-color-active);
 }
 
 #menu-undo {
@@ -430,161 +457,119 @@ body {
 
 
 /* Stats Popups Style */
-/* TODO: Style Stats and Feedback consistent with other parts */
-#menu-popup-stats { /* TODO: fix position */
-	width: var(--stats-width);
-	height: auto;
+#menu-popup-stats {
+	padding: 0 calc((100vw - var(--container-width))/2);
 	position: absolute;
-	top: calc(var(--top-bar-height) + 10px);
-	right: 0; /* right: calc((100vw - 1000px)/2); */
+	top: var(--top-bar-height);
+	right: 0;
 	background-color: var(--color-stats-background);
 	display: none;
 }
 
-#menu-popup-stats .menu-subpopup { /* TODO: fix position */
-	height: auto;
-	position: absolute;
-	top: 10px;
-	right: 200px;
-	background-color: var(--color-stats-feedback-background);
-	display: none;
-  border-radius: 20px;
-}
-
-.stats_menu_container{
+#menu-popup-stats > div { /* Container for stats and feedback */
+	width: var(--container-width);
+	min-height: calc(100vh - var(--top-bar-height));
 	display: flex;
 	flex-direction: column;
-	align-items: stretch;
-}
-
-.court_stats_icon{
-	max-width: 6in;
-	height: 100%;
-}
-
-.stats_menu_header_container{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
 	align-items: center;
-	font-size: 0.5in;
-	text-align: center;
+	justify-content: center;
 }
 
-.stats_menu_table_container{
-
+.stats_menu_table_container {
 	display:flex;
 	flex-direction: row;
 }
 
-.stats_menu_col{
+.stats_menu_table_header {
+	margin-bottom: var(--stats-table-margin);
+	font-size: var(--stats-table-header-font);
+	text-align: center;
+}
+
+.stats_menu_col {
+	position:relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	position:relative;
-	font-size: 0.2in;
+	font-size: var(--stats-table-font);
+}
+.stats_menu_col:first-child {
+	margin-right: var(--stats-table-margin);
 }
 
-.shot-pin{
+.stats_menu_table_row {
+	margin: var(--stats-table-margin);
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.shot-pin-display {
+	width: var(--stats-pin-icon-width);
+}
+.stats_stroke_name {
+	width: var(--stats-table-name-width);
+}
+.stats_icon {
+	width: var(--stats-stroke-icon-width);
+	margin-right: var(--stats-table-margin);
+}
+
+.court_stats_icon {
+	height: 100%;
+	max-width: var(--stats-court-max-width);
+}
+.shot-pin {
 	position: absolute;
-	width: 10%;
-	left:80%;
-	bottom:5%;
+	width: var(--stats-pin-icon-width);
+	left: 80%;
+	bottom: 5%;
 	opacity: 0.8;
 }
 
-.shot-pin-display{
-	width: 10%;
-
-}
-
-.stats_menu_table_row{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
-	margin: 0.1in;
-}
-
-.stats_icon{
-	width: 0.8in;
-	height: 0.8in;
-}
-
-.stats_menu_feedback_container{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	font-size: 1in;
-	height: 1in;
-}
-
-#stats_menu_btn {
-	border-radius: 20px;
-	color: #FFFFFF;
-	font-size: large;
-	font-weight: 100;
-	background-color: #3D94F6;
-	border: solid #337FED 1px;
-	text-decoration: none;
-	display: inline-block;
-	cursor: pointer;
-	margin: 5px;
-	height: 80%;
-}
-
-#stats_menu_btn:hover {
-	background: #000000;
-	text-decoration: none;
-}
-
-#feedback_menu_popup {
-    right: 290px !important;
-    padding: 20px;
-}
-
 .feedback_menu_container {
+	width: calc(var(--stats-feedback-text-width) + 2 * var(--stats-feedback-text-pad) + 4);
+	height: var(--stats-feedback-height);
+	margin-top: var(--stats-feedback-margin);
+	padding: var(--stats-feedback-pad);
 	display: flex;
 	flex-direction: column;
-	justify-content: stretch;
-	align-items: center;
+	justify-content: space-between;
+	background-color: var(--stats-feedback-background);
+	border: var(--stats-feedback-border);
+	border-radius: var(--button-radius-normal);
 }
 
-.feedback_menu_header_container{
-	font-size: large;
-	font-weight: 100;
-}
-
-.feedback_comment_box_container{
-	display: flex;
-	flex-direction: column;
-	justify-content: stretch;
-	align-items: center;
+.feedback_menu_header_container {
+	font-size: var(--stats-feedback-font-large);
+	font-weight: var(--stats-feedback-font-large-weight);
 }
 
 #feedback_text {
 	resize: none;
-	border-color: darkgrey;
-	border-style: solid;
-	border-width: 0.05in;
+	padding: var(--stats-feedback-text-pad);
+	border: var(--stats-feedback-text-border);
+	border-radius: var(--button-radius-normal);
+	width: var(--stats-feedback-text-width);
+	font-family: var(--font-family-normal);
+	font-size: var(--stats-feedback-font-normal);
 }
 
 .feedback_btn {
-	border-radius: 20px;
-	color: #FFFFFF;
-	font-size: large;
-	font-weight: 100;
-	background-color: #3D94F6;
-	border: solid #337FED 1px;
+	width: var(--stats-feedback-button-width);
+	margin-left: auto;
+	padding: var(--stats-feedback-button-pad);
+	background-color: var(--stats-feedback-button-color);
+	border: var(--stats-feedback-button-border);
+	border-radius: var(--button-radius-normal);
+	color: var(--stats-feedback-button-font-color);
+	font-size: var(--stats-feedback-font-large);
+	font-weight: var(--stats-feedback-font-large-weight);
 	text-decoration: none;
-	display: inline-block;
 	cursor: pointer;
-	margin: 5px;
 }
-
 .feedback_btn:hover {
-	background: #000000;
+	background: var(--stats-feedback-button-color-hover);
 	text-decoration: none;
 }
 /* (...Stats Popups Style) */
