--- a/main.css
+++ b/main.css
@@ -593,6 +593,7 @@ body {
 .stats_menu_container{
 	display:flex;
 	flex-direction: column;
+	margin-top: var(--stats-feedback-margin);
 }
 
 .stats_menu_table_container {
@@ -698,14 +699,14 @@ body {
 	width: var(--stats-feedback-button-width);
 	margin-left: auto;
 	padding: var(--stats-feedback-button-pad);
-	background-color: grey;
-	border: var(--stats-feedback-button-border);
+	background-color: #CCC;
+	border: 1px solid #BBB;
 	border-radius: var(--button-radius-normal);
 	color: var(--stats-feedback-button-font-color);
 	font-size: var(--stats-feedback-font-large);
 	font-weight: var(--stats-feedback-font-large-weight);
 	text-decoration: none;
-	cursor: pointer;
+	cursor: not-allowed;
 }
 .feedback_btn:hover {
 	background: var(--stats-feedback-button-color-hover);
@@ -743,6 +744,7 @@ table.history-table {
 	background-color: var(--stats-feedback-background);
   border: var(--stats-feedback-border);
   border-radius: var(--button-radius-normal);
+	border-collapse: collapse;
 }
 
 table.history-table td {
@@ -750,8 +752,8 @@ table.history-table td {
 	font-size: var(--stats-table-font);
 }
 
-table.history-table tr:hover > td {
-	color: var(--history-font-highlight);
+table.history-table tr:hover {
+	background-color: #e1e1e1;
 	cursor: pointer;
 }
 
