--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@
 	--stats-table-font: 18px;
 	--stats-table-header-font: 28px;
 
-	--player-feedback-viewer-width: 800px;
+	--player-feedback-viewer-width: 600px;
 	--player-feedback-font-small: 15px;
 	--player-feedback-font-color-light: #666;
 
@@ -573,7 +573,7 @@ body {
 
 /* Stats Popups Style */
 #menu-popup-stats, #player-view-content, #menu-popup-history, #menu-popup-player-history {
-	padding: 0 calc((100vw - var(--container-width))/2);
+	width: 100vw;
 	position: absolute;
 	top: var(--top-bar-height);
 	right: 0;
@@ -582,23 +582,26 @@ body {
 }
 
 #menu-popup-stats > div, #player-view-content > div, #menu-popup-history > div, #menu-popup-player-history > div { /* Container for stats and feedback */
-	width: var(--container-width);
-	min-height: calc(100vh - var(--top-bar-height));
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 30px;
+	height: calc(100vh - var(--top-bar-height) - 30px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	overflow-y: scroll;
 }
 
 .stats_menu_container{
 	display:flex;
 	flex-direction: column;
-	margin-top: var(--stats-feedback-margin);
 }
 
 .stats_menu_table_container {
 	display:flex;
 	flex-direction: row;
+	margin-top: var(--stats-feedback-margin);
 }
 
 .stats_menu_table_header {
@@ -679,6 +682,7 @@ body {
 	width: var(--stats-feedback-text-width);
 	font-family: var(--font-family-normal);
 	font-size: var(--stats-feedback-font-normal);
+	margin-bottom: 10px;
 }
 
 .feedback_btn {
