--- a/main.css
+++ b/main.css
@@ -265,10 +265,6 @@ body {
 #menu-menu .menu-popup .menu-item:hover {
 	background-color: var(--color-top-bar);
 }
-#current-matches > .menu-item:hover { /* Not clickable */
-	background-color: var(--color-top-bar-popup) !important;
-	cursor: default;
-}
 
 #menu-menu .menu-dropdown .menu-item {
 	width: calc(var(--top-bar-popup-width) - 2 * var(--top-bar-dropdown-pad));
@@ -287,11 +283,11 @@ body {
 
 #current-matches-empty {
 	width: var(--top-bar-popup-width);
-	padding: 20px 0;
+	padding: 20px;
 	background-color: var(--color-top-bar-dropdown);
 	color: var(--top-bar-font-color);
-	font-size: 14px;
-	text-align: center;
+	font-size: 16px;
+	cursor: not-allowed;
 	display: none;
 }
 /* (...Top Bar Popup & Dropdown Style) */
@@ -705,7 +701,7 @@ body {
 .feedback_btn {
 	width: var(--stats-feedback-button-width);
 	margin-left: auto;
-	padding: var(--stats-feedback-button-pad);
+	height: 100px;
 	background-color: var(--stats-feedback-button-color);
 	border: var(--stats-feedback-button-border);
 	border-radius: var(--button-radius-normal);
@@ -719,7 +715,7 @@ body {
 .feedback_btn_disabled {
 	width: var(--stats-feedback-button-width);
 	margin-left: auto;
-	padding: var(--stats-feedback-button-pad);
+	height: 100px;
 	background-color: #CCC;
 	border: 1px solid #BBB;
 	border-radius: var(--button-radius-normal);
@@ -990,4 +986,35 @@ table.history-table tr.history-table-empty:hover > td {
 }
 #end-match-modal .modal-submit:hover {
   background-color: var(--undo-button-background-hover);
+}
+
+/* All Current Matches Modal Style */
+#all-current-matches-modal .modal-content-header > div:first-child {
+	margin-right: 20px;
+}
+
+#all-current-matches-modal .modal-row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+}
+
+#all-current-matches-modal table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#all-current-matches-modal table tr {
+	font-size: 20px;
+	cursor: pointer;
+}
+
+#all-current-matches-modal table tr:hover {
+	background-color: #e1e1e1;
+}
+
+#all-current-matches-modal table tr td {
+	padding: 10px 20px;
 }
